# python-state-machine

./: README.md  pyproject.toml
scripts/: tests
src/app/: config.py  event_dispatcher.py  model.py  penguin_handler.py
